--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <h1 id="level-title">Press A Key to Start</h1>
+  <h2 id="highscorehead">0</h2>
+  <h2 id="highscore">High Score : </h2>
   <div class="container">
     <div lass="row">
       <div type="button" id="green" class="btn green">
